# GramTrans

./: .gitignore  README.md  environment.yml
DSL_experiment/: inference.py  test.py
DSL_experiment/data/: test.jsonl
DSL_experiment/output/: DSL_LL1.jsonl  DSL_LL2.jsonl  DSL_LR1.jsonl  DSL_NCFG.jsonl
Python_Java_experiment/: inference.py  inference_java.py  javatest.py  parsegrammar.py  parsegrammarjava.py
Python_Java_experiment/data/: humaneval-java-prompt.jsonl  humaneval-python-grammar.jsonl  humaneval-python-spy.jsonl
Python_Java_experiment/output/: DeepSeek_1layer_Java_humaneval.jsonl  DeepSeek_1layer_humaneval.jsonl  DeepSeek_1layer_mbpp.jsonl  DeepSeek_1layer_mbpp_eval_results.json  DeepSeek_Grammar_humaneval.jsonl  DeepSeek_Grammar_mbpp.jsonl  DeepSeek_Grammar_transform_humaneval.jsonl  DeepSeek_Grammar_transform_humaneval_eval_results.json  DeepSeek_Grammar_transform_mbpp.jsonl  DeepSeek_Grammar_transform_mbpp_eval_results.json  DeepSeek_Java_humaneval.jsonl  DeepSeek_LL1_humaneval.jsonl  DeepSeek_LL1_humaneval_eval_results.json  DeepSeek_LL1_mbpp.jsonl  DeepSeek_LL1_mbpp_eval_results.json  DeepSeek_Python_humaneval.jsonl  DeepSeek_Python_humaneval_eval_results.json  DeepSeek_Python_mbpp.jsonl  DeepSeek_Python_mbpp_eval_results.json  DeepSeek_SimPy_humaneval.jsonl  DeepSeek_SimPy_mbpp.jsonl  DeepSeek_SimPy_transform_humaneval.jsonl  DeepSeek_SimPy_transform_humaneval_eval_results.json  DeepSeek_SimPy_transform_mbpp.jsonl  DeepSeek_SimPy_transform_mbpp_eval_results.json  Qwen2.5_1layer_Java_humaneval.jsonl  Qwen2.5_1layer_humaneval.jsonl  Qwen2.5_1layer_humaneval_eval_results.json  Qwen2.5_1layer_mbpp.jsonl  Qwen2.5_1layer_mbpp_eval_results.json  Qwen2.5_Grammar_humaneval.jsonl  Qwen2.5_Grammar_mbpp.jsonl  Qwen2.5_Java_humaneval.jsonl  (+42 more)
parse_environment/tree-sitter-mathqapythoncsg/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  newgrammar.json  package.json  pyproject.toml  setup.py  tree-sitter.json
parse_environment/tree-sitter-mathqapythoncsg/bindings/c/: tree-sitter-mathqapythoncsg.pc.in
parse_environment/tree-sitter-mathqapythoncsg/bindings/go/: binding.go  binding_test.go
parse_environment/tree-sitter-mathqapythoncsg/bindings/node/: binding.cc  index.js
parse_environment/tree-sitter-mathqapythoncsg/bindings/python/tests/: test_binding.py
parse_environment/tree-sitter-mathqapythoncsg/bindings/python/tree_sitter_mathqapythoncsg/: __init__.py  binding.c
parse_environment/tree-sitter-mathqapythoncsg/bindings/rust/: build.rs  lib.rs
parse_environment/tree-sitter-mathqapythoncsg/bindings/swift/TreeSitterMathqapythoncsg/: mathqapythoncsg.h
parse_environment/tree-sitter-mathqapythoncsg/bindings/swift/TreeSitterMathqapythoncsgTests/: TreeSitterMathqapythoncsgTests.swift
parse_environment/tree-sitter-mathqapythoncsg/src/: node-types.json  parser.c  scanner.c
parse_environment/tree-sitter-mathqapythonll2/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  newgrammar.json  package.json  pyproject.toml  setup.py  tree-sitter.json
parse_environment/tree-sitter-mathqapythonll2/bindings/c/: tree-sitter-mathqapythonll2.pc.in
parse_environment/tree-sitter-mathqapythonll2/bindings/go/: binding.go  binding_test.go
parse_environment/tree-sitter-mathqapythonll2/bindings/node/: binding.cc  index.js
parse_environment/tree-sitter-mathqapythonll2/bindings/python/tests/: test_binding.py
parse_environment/tree-sitter-mathqapythonll2/bindings/python/tree_sitter_mathqapythonll2/: __init__.py  binding.c
parse_environment/tree-sitter-mathqapythonll2/bindings/rust/: build.rs  lib.rs
parse_environment/tree-sitter-mathqapythonll2/bindings/swift/TreeSitterMathqapythonll2/: mathqapythonll2.h
parse_environment/tree-sitter-mathqapythonll2/bindings/swift/TreeSitterMathqapythonll2Tests/: TreeSitterMathqapythonll2Tests.swift
parse_environment/tree-sitter-mathqapythonll2/src/: node-types.json  parser.c  scanner.c
parse_environment/tree-sitter-pymbhe/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
parse_environment/tree-sitter-pymbhe/bindings/c/: tree-sitter-pymbhe.pc.in
parse_environment/tree-sitter-pymbhe/bindings/go/: binding.go  binding_test.go
parse_environment/tree-sitter-pymbhe/bindings/node/: binding.cc  index.js
parse_environment/tree-sitter-pymbhe/bindings/python/tests/: test_binding.py
parse_environment/tree-sitter-pymbhe/bindings/python/tree_sitter_pymbhe/: __init__.py  binding.c
parse_environment/tree-sitter-pymbhe/bindings/rust/: build.rs  lib.rs
parse_environment/tree-sitter-pymbhe/bindings/swift/TreeSitterPymbhe/: pymbhe.h
parse_environment/tree-sitter-pymbhe/bindings/swift/TreeSitterPymbheTests/: TreeSitterPymbheTests.swift
parse_environment/tree-sitter-pymbhe/src/: grammar.json  node-types.json  parser.c  scanner.c
(+164 files in other folders)
